--- a/index.textile
+++ b/index.textile
@@ -5,6 +5,23 @@ title: Immutable Collections Library for Javascript
 <head>
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
 	<link rel="stylesheet" href="http://mads379.github.com/bachelorproject/css/screen.css" type="text/css" media="screen" title="no title" charset="utf-8">
+	<script src="http://mads379.github.com/bachelorproject/js/jquery-1.5.1.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="http://mads379.github.com/bachelorproject/bin/Mahj.js" type="text/javascript" charset="utf-8"></script>
+	<script src="http://mads379.github.com/bachelorproject/bin/Option.js" type="text/javascript" charset="utf-8"></script>
+	<script src="http://mads379.github.com/bachelorproject/bin/Traversable.js" type="text/javascript" charset="utf-8"></script>
+	<script src="http://mads379.github.com/bachelorproject/bin/List.js" type="text/javascript" charset="utf-8"></script>
+	<script type="text/javascript">
+		
+		function wrapInFunction(code) {
+			return "(function(){"+code+"})()";
+		}
+	
+		$(document).ready(function() {
+			$('#evaluate').bind('click',function() {
+				alert("Result: " + eval(wrapInFunction($('#code').val().replace(/\\n/g,""))));
+			});
+		});
+	</script>
 </head>
 
 
@@ -24,6 +41,14 @@ h2. About
 The library is written in Coffeescript[1], a small language that compiles to JavaScript, as it adds a few semantics simplifies the code.
 
 This is a product of the bachelor project of Mads Hartmann Jensen under supervision of Peter Sestoft.
+
+h3. Try it out
+
+notextile. <textarea name="code" rows="20" cols="80" id="code">return new List(1,2,3,4,5,6,7,8,9,10).foldLeft(0)( function(acc,elem){     
+  return acc + elem;
+});    
+</textarea>
+<button type="submit" id="evaluate">Evaluate</button>
 
 h2. Getting the code
 
