wrote a few words on the javascript call-stack

--- a/paper.textile
+++ b/paper.textile
@@ -32,6 +32,7 @@ h2(#table_of_contents). Table of Contents
 ## "Implemented Data Structures":#implemented_data_structures
 # "User’s guide and examples":#users_guide_and_examples
 # "Technical description of the program":#technical_description_of_the_program
+## "Javascript call-stack":#javascript_call_stack
 ## "Object construction":#object_construction
 # "Test":#test
 # "Conclusion":#conclusion
@@ -409,6 +410,12 @@ If I have the time it would be cool to implement one or two of the problems in "
 
 h2(#technical_description_of_the_program). Technical description of the program
 
+h3(#javascript_call_stack). Javascript call-stack
+
+All the implementations of javascript that I have tried have a fixed upper bound of the size of the call-stack. In firefox it's 3000, chrome 26.205 and Safari 52.427. Also javascript doesn't do tail-call optimizations. This restricts how "functional" it's possible to.
+
+Instead of writing the map function on a list using the tail-recursive foldLeft method I instead use the forEach method and rely on side-effect to construct a new List with the mapped values. However, luckily this is an implementation detail and the API of the collections are still the same so if the javascript implementations should improve in the future it's possible for me to change the library implementation. 
+
 h3(#object_construction). Object construction
 
 There are many different ways to construct a new object in javascript and each one comes with its own set of merits and penalties. In this section I will introduce X different ways to construct objects in javascript and explain which one I've chosen for this library and why. 
@@ -430,7 +437,7 @@ Class.prototype.method = function(){}</code></pre>
 
 This resolves the disadvantage of the factory approach as all the instances share the same prototype object. This means that object creation is roughly 3 x faster (see section about performance tests) because the interpreter doesn't need to add the same methods to all of the objects and the objects takes up less memory. 
 
-However, because the methods are no longer stored directly on the object the interpreter needs to do, at least, one extra lookup before it can execute the method. Because of this it takes roughly %40 longer to invoke a method on an object with this approach. 
+However, because the methods are no longer stored directly on the object the interpreter needs to do, at least, one extra lookup before it can execute the method. Because of this it takes roughly %40 longer to invoke a method on an object with this approach. With this approach it's not possible for the objects to have any private state. 
 
 h2(#test). Test
 
