--- a/paper.textile
+++ b/paper.textile
@@ -171,6 +171,10 @@ h3(#implemented_data_structures). Implemented Data Structures
 
 The following abstract data types have have been implemented: List, Set, Queue, Map, MultiMap, Stack. Some abstract data types have more than one implementation based on different data structures that offer different running time complexities of their operations. This allows the developer to pick the implementation that fits his/her needs. This section will describe each abstract data types and their implementations. 
 
+<center>
+	<img src="images/prototype-chain.png" width="567" height="341" alt="Prototype Chain" />
+</center>
+
 Though the abstract data types are different in many ways they all support the same subset of operations. The most important operations are described below. For a full list of operations on each data type see the API documentation. 
 
 In the following table the complexities are expressed in terms of n or n' where n is the size of the original collection and n' is the size of the resulting collection.
@@ -411,8 +415,6 @@ If I have the time it would be cool to implement one or two of the problems in "
 h2(#technical_description_of_the_program). Technical description of the program
 
 h3(#prototype_chain). Prototype chain 
-
-<img src="images/prototype-chain.png" width="567" height="341" alt="Prototype Chain" />
 
 h3(#javascript_call_stack). Javascript call-stack
 
